tests/sksl/errors/ReservedNameGoto.glsl
### Compilation failed:

error: 1: 'goto' is a reserved word
1 error
